--- a/app/templates/coauthoring/main.tex
+++ b/app/templates/coauthoring/main.tex
@@ -12,7 +12,7 @@
 
 \maketitle
 
-\section{CERN YELLOWPAGES :p}
+\section{CERN Coauthoring :P}
 There is a theory which states that if ever anyone discovers exactly what the Universe is for and why it is here, it will instantly disappear and be replaced by something even more bizarre and inexplicable.
 There is another theory which states that this has already happened.
 
